# explorer

./: .dockerignore  .env  .gitignore  Cargo.toml  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs  routes.rs  sync.rs
crates/db/: Cargo.toml
crates/db/src/: database.rs  lib.rs  serialization.rs  transaction.rs
crates/parser/: Cargo.toml
crates/parser/src/: block.rs  block_spend.rs  block_spends.rs  error.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: block_record.rs  coin_record.rs  coin_spend_record.rs  coin_type.rs  lib.rs  p2_puzzle.rs
docker/api/: Dockerfile
explorer/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
explorer/src/: App.tsx  api.ts  main.tsx
explorer/src/api/: block.ts
explorer/src/components/: BundleViewer.tsx  ColoredLink.tsx  DropdownSelector.tsx  Layout.tsx  Nav.tsx  Navbar.tsx  Truncated.tsx
explorer/src/components/ui/: button.tsx  select.tsx  switch.tsx
explorer/src/contexts/: CoinsetContext.tsx  DexieContext.tsx  MintGardenContext.tsx
explorer/src/hooks/: useDexie.ts  useMintGarden.ts
explorer/src/lib/: api.ts  constants.ts  conversions.ts  json.ts  parser.ts  utils.ts
explorer/src/lib/parser/: coin.ts  coinSpend.ts  conditions.ts  context.ts  deserializedCoinSpend.ts  index.ts  layers.ts  messages.ts  spendBundle.ts
explorer/src/pages/: Block.tsx  BlockPage.tsx  Coin.tsx  Home.tsx  HomePage.tsx  SearchResultsPage.tsx  Tools.tsx
migrations/: 0001_init.sql
src/: App.tsx  config.rs  db.rs  main.rs  main.tsx  process.rs  routes.rs  sync.rs
src/components/: External.tsx  Nav.tsx  SpendViewer.tsx
src/components/ui/: tooltip.tsx
src/contexts/: CoinsetContext.tsx  DarkModeContext.tsx  MintGardenContext.tsx
src/db/: database.rs  rows.rs  transaction.rs
src/db/rows/: block.rs  coin.rs
src/hooks/: useCoinset.ts  useDarkMode.ts
src/lib/: json.ts
src/lib/parser/: arg.ts  blockSpends.ts  coin.ts  conditions.ts  layers.ts  messages.ts
src/pages/: Block.tsx  Coin.tsx  Home.tsx  Tools.tsx
src/process/: block.rs  coin_spend.rs  insertion.rs
