[workspace]
members = ["crates/*"]

[workspace.dependencies]
xchdev-api = { path = "crates/api" }
xchdev-db = { path = "crates/db" }
xchdev-parser = { path = "crates/parser" }
xchdev-types = { path = "crates/types" }

chia-wallet-sdk = { path = "../wallet-sdk" }
chia = "0.26.0"
clvmr = "0.14.0"
thiserror = "2.0.12"
serde = { version = "1.0.219" }

anyhow = "1.0.97"
num_cpus = "1.16.0"
rocksdb = "0.23.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.1", features = ["full"] }
zstd = "0.13.3"
rayon = "1.10.0"
chia-puzzles = "0.20.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { version = "0.8.1", features = ["macros"] }
itertools = "0.14.0"
pot = "3.0.1"
tower-http = { version = "0.6.2", features = ["cors"] }
indexmap = "2.8.0"
homedir = "0.3.4"
toml = "0.8.20"
topk8 = { git = "https://github.com/xch-dev/topk8" }
