[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
xchdev-api = { path = "crates/api" }
xchdev-db = { path = "crates/db" }
xchdev-parser = { path = "crates/parser" }
xchdev-types = { path = "crates/types" }

chia-wallet-sdk = { path = "../wallet-sdk" }
chia = "0.26.0"
clvmr = "0.14.0"

rocksdb = "0.23.0"
thiserror = "2.0.12"
serde = "1.0.219"
anyhow = "1.0.97"
num_cpus = "1.16.0"
ciborium = "0.2.2"
zstd = "0.13.3"
tokio = "1.44.1"
rayon = "1.10.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
topk8 = { git = "https://github.com/xch-dev/topk8" }
axum = { version = "0.8.1", features = ["macros"] }
indexmap = "2.8.0"
tower-http = { version = "0.6.2", features = ["cors"] }
itertools = "0.14.0"
homedir = "0.3.4"
toml = "0.8.20"
hex = "0.4.3"
